tests/macros/raw_select/plugin.stderr
error: option `plugin` does not exist for kind `raw_select`
 --> $DIR/plugin.rs:2:47
  |
2 |     let q = requestty::questions![RawSelect { plugin: todo!() }];
  |                                               ^^^^^^
