tests/macros/raw_select/plugin.rs
fn main() {
    let q = requestty::questions![RawSelect { plugin: todo!() }];
}
